--- a/Individual JSON/8UNNXSGC.json
+++ b/Individual JSON/8UNNXSGC.json
@@ -26,5 +26,6 @@
     },
     "keyword": [
         "Technology"
-    ]
+    ],
+    "cover": "https://books.google.co.uk/books/content?id=ZU62BQAAQBAJ&printsec=frontcover&img=5&zoom=2"
 }
