Corrected some dates

--- a/Individual JSON/LWHQ5NXE.json
+++ b/Individual JSON/LWHQ5NXE.json
@@ -10,6 +10,15 @@
             "literal": "Cambridge University"
         }
     ],
+    "issued": {
+        "date-parts": [
+            [
+                "2017",
+                11,
+                10
+            ]
+        ]
+    },
     "accessed": {
         "date-parts": [
             [
